Changes made to cookbook names

--- a/minutes/2017-05-08.md
+++ b/minutes/2017-05-08.md
@@ -31,9 +31,9 @@ Monday May 8 2017 12:00-10:00 PST
 
 ## Minutes:
 
-- redisio: should be making a release in the next day or too which a _LARGE_ amount of updates sc-mongodb
-- Postgresql: still working on cluster testing in test-kitchen
-- HAProxy: review of OS specific issues in progress HAProxy
-- HAProxy: 4.2.0 released Actions
+- redisio: should be making a release in the next day or too which a _LARGE_ amount of updates
+- sc-mongodb: still working on cluster testing in test-kitchen
+- haproxy: review of OS specific issues in progress haproxy
+- haproxy: 4.2.0 released Actions
 
 ## Actions
