Add meeting minutes

--- a/minutes/2018-09-17.md
+++ b/minutes/2018-09-17.md
@@ -11,14 +11,23 @@ Monday 2018-09-17 19:00-20:00 UTC
 # Agenda
 
 ## Development News
-
 -   CircleCI update
   <https://github.com/sous-chefs/postgresql/pull/559>
 
+-   Github Terraform
 -   apache2
--   postgresql
--   line
+-   ~~line~~
+-   [sc-nxlog](https://github.com/sous-chefs/sc-nxlog)
 -   AOB
 -   Vault
 
-## Actions
+## Github Terraform
+-   CI pipeline needs feedback to users.
+-   Ben Abrams suggested using [Atlantis](https://github.com/runatlantis/atlantis).
+-   Needs codeowners file
+
+## SC-NXlog
+-   Needs releasing soon..!
+
+## Vault & Consul Cookbooks
+-   Needs to be unpoised
